<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_layout"
    android:background="@color/bg_color_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/detail_text"
            android:textSize="28sp"
            android:textColor="@color/text_color"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/in_day_button"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                app:backgroundTint="@null"
                android:text="@string/in_day_text"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/in_week_button"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                app:backgroundTint="@null"
                android:text="@string/in_week_text"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:layout_marginStart="32dp"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/total_day_text"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/total_money_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/zero_text"
                android:textColor="@color/text_color"
                android:textAlignment="textEnd"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:text="@string/money_text"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/highlight_text"
            android:textSize="24sp"
            android:textColor="@color/text_color"
            android:layout_marginTop="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detail_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            tools:listitem="@layout/detail_chip"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/add_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="@string/add_text"
        android:background="@drawable/bg_add_button"
        android:src="@drawable/ic_add"
        android:scaleType="center"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>