<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_chip"
    android:layout_marginVertical="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dola_text"
            android:textSize="24sp"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/amount_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/zero_text"
                    android:textColor="@color/text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money_text"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:layout_marginStart="4dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/note_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_color"
                android:textSize="16sp"
                android:text="@string/note_text"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/day_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_text"
            android:textSize="16sp"
            android:textColor="@color/text_color"
            android:layout_gravity="center"
            android:layout_marginEnd="28dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>