<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/bg_chip_color"
    app:cardCornerRadius="24dp"
    app:strokeWidth="1dp"
    app:cardElevation="8dp"
    app:strokeColor="@color/bg_chip_stroke_color">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/edit_delete_text"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_text_view"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/edit_button"
                android:layout_width="130dp"
                android:layout_height="56dp"
                android:text="@string/edit_text"
                android:textSize="18sp"
                android:textColor="@color/text_color"
                android:background="@drawable/bg_button"
                app:backgroundTint="@null"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/delete_button"
                android:layout_width="130dp"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:text="@string/delete_text"
                android:textSize="18sp"
                android:textColor="@color/text_color"
                android:background="@drawable/bg_button"
                app:backgroundTint="@null"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>